[package]
name = "rust-learn"
version = "0.1.0"
authors = ["decode"]
edition = "2018"


[features]
default = []
debug = []

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = ["winuser", "minwindef", "libloaderapi", "windef"] }
gfx = "0.17"

chrono = "0.4.6"
lazy_static = "1.2.0"